<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_character"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView_characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/namePlace"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_characterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/statusPlace"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_characterSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/speciesPlace"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_characterGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/genderPlace"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_characterOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/originPlace"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_characterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/locationPlace"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView_characterEpisode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/EpisodePlace"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>